--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -5,7 +5,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="home">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li class="current"><a href="covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
@@ -14,3 +14,24 @@
         </nav>
     </div>
 </header>
+<section id="showcaseCovid">
+    <div class="container">
+        <h1></h1>
+        <article class="information">
+            <div>
+                <p>
+
+                </p>
+            </div>
+        </article>
+    </div>
+</section>
+<section id="covid">
+    <div class="container">
+        <label for="county">Choose a country</label>
+        <select class="countries">
+
+        </select>
+        <input id="btnSubmit" type="submit" value="submit"/>
+    </div>
+</section>
