--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -30,8 +30,15 @@
     <div class="container">
         <label for="county">Choose a country</label>
         <select class="countries">
-
         </select>
-        <input id="btnSubmit" type="submit" value="submit"/>
+        <input id="btnSubmit" type="submit" value="submit" />
     </div>
+    <aside id="sidebarCovid">
+        <div class="covid">
+            <h1>Country</h1>
+            <p>
+                Facts about that country.
+            </p>
+        </div>
+    </aside>
 </section>
