--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -27,7 +27,7 @@
     </div>
 </section>
 <section id="covid">
-    <div class="container">
+    <div class="covidContainer">
         <label for="county">Choose a country</label>
         <select class="countries">
         </select>
