--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -9,7 +9,8 @@
             <ul>
                 <li><a href="home">Home</a></li>
                 <li><a href="about">About</a></li>
-                <li class="current"><a href="covid">Covid-19</a></li>
+                <li><a href="github">Github</a></li>
+                <li class="current"><a href="Covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
                 <li><a href="http://www.reloading.ingmandev.se">Reloading</a></li>
             </ul>
@@ -35,7 +36,6 @@
         @foreach (var country in Model)
         {
             <p>@Html.DisplayFor(item => country.Country)</p>
-            <br />
         }
     </div>
     <aside id="sidebarCovid">
