Cleaned up summary.cshtml

--- a/IngmanDevelopment/Views/Covid/Summary.cshtml
+++ b/IngmanDevelopment/Views/Covid/Summary.cshtml
@@ -6,9 +6,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="github">Github</a></li>
+                <li><a href="../home">Home</a></li>
+                <li><a href="../about">About</a></li>
+                <li><a href="../github">Github</a></li>
                 <li class="current"><a href="Covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
                 <li><a href="http://www.reloading.ingmandev.se">Reloading</a></li>
@@ -30,22 +30,23 @@
 </section>
 <section id="covid">
     <div class="covidContainer">
-        <h2>Nya bekräftade fall</h2>
+        <h1>Globala siffror</h1>
+        <h3>Nya bekräftade fall</h3>
         <p>@Model.Global.NewConfirmed</p>
         
-        <h2>Totala bekräftade fall</h2>
+        <h3>Totala bekräftade fall</h3>
         <p>@Model.Global.TotalConfirmed</p>
         
-        <h2>Totala antalet dödsfall</h2>
+        <h3>Totala antalet dödsfall</h3>
         <p>@Model.Global.TotalDeaths</p>
         
-        <h2>Nya dödsfall</h2>
+        <h3>Nya dödsfall</h3>
         <p>@Model.Global.NewDeaths</p>
         
-        <h2>Antal nya friskförklarade</h2>
+        <h3>Antal nya friskförklarade</h3>
         <p>@Model.Global.NewRecovered</p>
         
-        <h2>Totala antalet friskförklarade</h2>
+        <h3>Totala antalet friskförklarade</h3>
         <p>@Model.Global.TotalRecovered</p>
         
     </div>
