--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model SummaryViewModel
-
+@section scripts {
+    <script src="~/js/formHandler.js"></script>
+}
 <header>
     <div class="container">
         <div id="brand">
@@ -31,7 +33,7 @@
 </section>
 <section id="covid">
     <div class="covidContainer">
-        <form asp-action="Index">
+        <form asp-action="Index" method="get">
             <h2>@Html.DisplayNameFor(x => x.Countries)</h2>
             <p>@Html.DropDownListFor(x => Model.SelectedCountry, new SelectList(Model.Countries, "Value", "Text"), "Välj land") </p>
             <button type="submit">Ok</button> />
