--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -9,9 +9,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="github">Github</a></li>
+                <li><a href="../home">Home</a></li>
+                <li><a href="../about">About</a></li>
+                <li><a href="../github">Github</a></li>
                 <li class="current"><a href="Covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
                 <li><a href="http://www.reloading.ingmandev.se">Reloading</a></li>
