--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -32,7 +32,7 @@
     </div>
 </section>
 <section id="covid">
-    <form asp-action="Index" asp-controller="covid" method="get">
+    <form asp-action="Index" asp-controller="Covid" method="get">
         <div class="covidContainer">
 
             <h2>@Html.DisplayNameFor(x => x.Countries)</h2>
