--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -32,6 +32,7 @@
     </div>
 </section>
 <section id="covid">
+    <h1>All data kommer från Johns Hopkins i USA</h1>
     <form asp-action="Index" asp-controller="Covid" method="get">
         <div class="covidContainer">
 
@@ -65,4 +66,9 @@
             </div>
         </aside>
     </form>
+</section>
+<section>
+    <div id="space">
+
+    </div>
 </section>
