--- a/IngmanDevelopment/Views/Covid/Index.cshtml
+++ b/IngmanDevelopment/Views/Covid/Index.cshtml
@@ -43,25 +43,25 @@
             <div class="covid">
                 <h1></h1>
 
-                <p>@Html.DisplayNameFor(model => model.NewConfirmed)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.NewConfirmed)</p>
                 <p>@Html.DisplayFor(model => model.NewConfirmed)</p>
 
-                <p>@Html.DisplayNameFor(model => model.TotalConfirmed)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.TotalConfirmed)</p>
                 <p>@Html.DisplayFor(model => model.TotalConfirmed)</p>
 
-                <p>@Html.DisplayNameFor(model => model.NewDeaths)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.NewDeaths)</p>
                 <p>@Html.DisplayFor(model => model.NewDeaths)</p>
 
-                <p>@Html.DisplayNameFor(model => model.TotalDeaths)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.TotalDeaths)</p>
                 <p>@Html.DisplayFor(model => model.TotalDeaths)</p>
 
-                <p>@Html.DisplayNameFor(model => model.NewRecovered)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.NewRecovered)</p>
                 <p>@Html.DisplayFor(model => model.NewRecovered)</p>
 
-                <p>@Html.DisplayNameFor(model => model.TotalRecovered)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.TotalRecovered)</p>
                 <p>@Html.DisplayFor(model => model.TotalRecovered)</p>
 
-                <p>@Html.DisplayNameFor(model => model.Date)</p>
+                <p class="headline">@Html.DisplayNameFor(model => model.Date)</p>
                 <p>@Html.DisplayFor(model => model.Date)</p>
             </div>
         </aside>
